; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/extr_tty_mutex.c_tty_lock_slave.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/extr_tty_mutex.c_tty_lock_slave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { %struct.tty_struct* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tty_lock_slave(%struct.tty_struct* %0) #0 {
  %2 = alloca %struct.tty_struct*, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %2, align 8
  %3 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %4 = icmp ne %struct.tty_struct* %3, null
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %7 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %8 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %7, i32 0, i32 0
  %9 = load %struct.tty_struct*, %struct.tty_struct** %8, align 8
  %10 = icmp ne %struct.tty_struct* %6, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %5
  %12 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %13 = call i32 @tty_lock(%struct.tty_struct* %12)
  br label %14

14:                                               ; preds = %11, %5, %1
  ret void
}

declare dso_local i32 @tty_lock(%struct.tty_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
